# aderyn-ai

./: .gitignore  .gitmodules  README.md
resolver/: .env.sample  pyproject.toml
resolver/data/: report.json
resolver/resolver/: ask_chatgpt.py  load_data.py  load_soldocs.py  search_data.py
